--- a/src/App.css
+++ b/src/App.css
@@ -84,4 +84,15 @@ body {
     width:90vw!important;
 top:100%;
   }
+  .input{
+    height:30px!important;
+    min-height: 30px!important;
+  }
+  .title{
+    font-size: 18px!important;;
+  }
+  .sub-title{
+    font-size: 12px!important;
+  }
+  
 }
