--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button{
+  cursor: pointer!important;
+}
+
+a:hover{
+  text-decoration: none!important;
+}
