--- a/src/App.css
+++ b/src/App.css
@@ -84,8 +84,21 @@ body {
     display:none!important;
   }
   .cust-modal{
-    width:90vw!important;
+    max-width:90vw!important;
 top:100%;
+  }
+  .cust-modal input{
+    max-width:80vw!important;
+  }
+  .cust-modal select{
+    max-width:80vw!important;
+  }
+  .cust-modal textarea{
+    max-width:80vw!important;
+  }
+  .cust-modal div{
+    max-width:80vw!important;
+  
   }
   .input{
     height:30px!important;
@@ -97,7 +110,11 @@ top:100%;
   .sub-title{
     font-size: 12px!important;
   }
-  
+  .close{
+    right:20px!important;
+    color:black!important;
+    top:20px!important;
+  }
 }
 
 
