--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,13 @@ top:100%;
 }
 
 
+.profile-image{
+  width:100px;
+  height: 100px;
+  border-radius: 50px;
+  object-fit: cover;
+}
+
+.edit-link, .edit__link{
+  cursor: pointer;
+}
